--- a/src/components/App.css
+++ b/src/components/App.css
@@ -94,3 +94,14 @@ iframe {
   background-color: #343d50;
   color: white;
 }
+
+.loading {
+  clip-path: inset(0 1ch 0 0);
+  animation: l 2s steps(4) infinite;
+}
+
+@keyframes l {
+  to {
+    clip-path: inset(0 -1ch 0 0)
+  }
+}
